--- a/src/views/Dashboard/components/Trending/Trending.css
+++ b/src/views/Dashboard/components/Trending/Trending.css
@@ -1,7 +1,7 @@
 .trending {
   /* border: 3px solid peachpuff; */
   /* height: 100%; */
-  margin: 3.5rem 0;
+  margin-top: 3.5rem;
   background: var(--primarybg);
 }
 
