--- a/src/views/Dashboard/components/Nav/Nav.css
+++ b/src/views/Dashboard/components/Nav/Nav.css
@@ -119,6 +119,10 @@
   .icon-item:hover {
     transform: rotate(-3deg) translateY(-0.5rem);
   }
+
+  .cubespinner {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 425px) {
@@ -131,5 +135,114 @@
   }
   .nav-icons-column {
     width: 75%;
+  }
+}
+
+.cubespinner {
+  animation-name: spincube;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-duration: 12s;
+  transform-style: preserve-3d;
+  transform-origin: 25px 25px 0;
+  margin-left: calc(50% - 25px);
+}
+
+.cubespinner div {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border: 1px solid var(--primarycolor);
+  background: var(--bgprimary);
+  text-align: center;
+  font-size: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 5px 0px var(--secondarycolor);
+  /* animation: glow 20s infinite; */
+}
+
+.cubespinner div * {
+  z-index: 5;
+}
+
+.cubespinner div::after {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: var(--primarybg);
+  content: "";
+  top: 0;
+  left: 0;
+  opacity: 75%;
+}
+
+.logo-img {
+  height: 100%;
+  width: 100%;
+  opacity: 50%;
+}
+
+.face1 {
+  transform: translateZ(25px);
+}
+.face2 {
+  transform: rotateY(90deg) translateZ(25px);
+}
+.face3 {
+  transform: rotateY(90deg) rotateX(90deg) translateZ(25px);
+}
+.face4 {
+  transform: rotateY(180deg) rotateZ(90deg) translateZ(25px);
+}
+.face5 {
+  transform: rotateY(-90deg) rotateZ(90deg) translateZ(25px);
+}
+.face6 {
+  transform: rotateX(-90deg) translateZ(25px);
+}
+
+@keyframes glow {
+  from,
+  to {
+    box-shadow: 0 0 5px 0px var(--secondarycolor);
+  }
+  16% {
+    box-shadow: 0 0 65px 0px var(--secondarycolor);
+  }
+  33% {
+    box-shadow: 0 0 10px 0px var(--secondarycolor);
+  }
+  50% {
+    box-shadow: 0 0 45px 0px var(--secondarycolor);
+  }
+  66% {
+    box-shadow: 0 0px 5px 0px var(--secondarycolor);
+  }
+  83% {
+    box-shadow: 0 0 25px 0px var(--secondarycolor);
+  }
+}
+
+@keyframes spincube {
+  from,
+  to {
+    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  }
+  16% {
+    transform: rotateY(-90deg) rotateZ(90deg);
+  }
+  33% {
+    transform: rotateY(-90deg) rotateX(90deg);
+  }
+  50% {
+    transform: rotateY(-180deg) rotateZ(90deg);
+  }
+  66% {
+    transform: rotateY(-270deg) rotateX(90deg);
+  }
+  83% {
+    transform: rotateX(90deg);
   }
 }
