--- a/src/App.css
+++ b/src/App.css
@@ -135,3 +135,17 @@ body {
 .thin {
   font-weight: 100;
 }
+
+@media screen and (max-width: 850px) {
+  .btn {
+    width: 27.9rem;
+  }
+
+  .small-blurb {
+    font-size: 1.1rem;
+  }
+
+  .heading-sm {
+    font-size: 1.4rem;
+  }
+}
